# simconnect-bus-toolbox

./: .gitignore  CMakeLists.txt  README.md
include/: SimConnectInterface.h
matlab/: SimConnectBusToolbox.slx
src/: SimConnectBusInterface.cpp
src/Interface/: SimConnectInterface.cpp
src/Simulink/: SimConnectBusInterface.cpp
